--- a/app/src/main/res/layout/activity_root.xml
+++ b/app/src/main/res/layout/activity_root.xml
@@ -14,6 +14,7 @@
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
+            style="@style/ArticleToolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:elevation="4dp"
@@ -41,7 +42,6 @@
     </androidx.core.widget.NestedScrollView>
 
     <ru.skillbranch.skillarticles.ui.custom.ArticleSubmenu
-        android:theme="@style/ArticleBarsTheme"
         android:id="@+id/submenu"
         android:layout_width="200dp"
         android:layout_height="96dp"
@@ -49,19 +49,18 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:elevation="8dp"
-        app:layout_dodgeInsetEdges="bottom"
+        android:theme="@style/ArticleBarsTheme"
         android:visibility="gone"
-        tools:visibility="visible"
-        />
+        app:layout_dodgeInsetEdges="bottom"
+        tools:visibility="visible" />
 
     <ru.skillbranch.skillarticles.ui.custom.Bottombar
         android:id="@+id/bottombar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:theme="@style/ArticleBarsTheme"
-        app:layout_insetEdge="bottom"
         android:elevation="4dp"
-        />
+        android:theme="@style/ArticleBarsTheme"
+        app:layout_insetEdge="bottom" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
