--- a/app/src/main/res/layout/activity_root.xml
+++ b/app/src/main/res/layout/activity_root.xml
@@ -59,6 +59,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
+        android:minHeight="56dp"
         android:elevation="4dp"
         android:theme="@style/ArticleBarsTheme"
         app:layout_insetEdge="bottom" />
