--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,14 +33,17 @@
         <item name="titleTextColor">?attr/colorOnPrimary</item>
         <item name="contentInsetStartWithNavigation">0dp</item>
     </style>
-
-
+    
     <style name="BottombarIcon">
         <item name="android:layout_width">56dp</item>
         <item name="android:layout_height">56dp</item>
         <item name="android:padding">16dp</item>
         <item name="android:tint">@color/tint_color</item>
         <item name="android:background">@drawable/ripple</item>
+    </style>
+    
+    <style name="BottombarSearchIcon" parent="BottombarIcon">
+        <item name="tint">@color/tint_search_color</item>
     </style>
 
     <style name="CustomSnackbar" parent="Widget.MaterialComponents.Snackbar">
