--- a/app/src/main/res/layout/activity_root.xml
+++ b/app/src/main/res/layout/activity_root.xml
@@ -34,13 +34,15 @@
         android:layout_height="match_parent"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
-        <TextView
+        <ru.skillbranch.skillarticles.ui.custom.markdown.MarkdownTextView
             android:id="@+id/tv_text_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:textColor="?attr/colorOnBackground"
             android:focusable="true"
             android:focusableInTouchMode="true"
-            android:layout_margin="16dp"
+            android:padding="8dp"
             android:text="Loading..." />
     </androidx.core.widget.NestedScrollView>
 
@@ -62,8 +64,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:minHeight="56dp"
         android:elevation="4dp"
+        android:minHeight="56dp"
         android:theme="@style/ArticleBarsTheme"
         app:layout_insetEdge="bottom" />
 
